--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.15.11",
-    "@astrojs/check": "^0.9.4",
-    "typescript": "^5.6.2"
+    "@astrojs/check": "0.9.4",
+    "astro": "4.15.11",
+    "typescript": "5.6.2"
+  },
+  "devDependencies": {
+    "oxlint": "0.9.9"
   }
 }
